--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
         Cầu lông <input type="checkbox" name="ckb"> <br>
         Bơi lội <input type="checkbox" name="ckb"> <br>
         Chơi game <input type="checkbox" name="ckb"> <br>
+        <label>Thành phố</label>
+        <select>
+            <option>Hải Phòng</option>
+            <option>Hà Nội</option>
+            <option>Hồ Chí Minh</option>
+            <option>Đà Nẵng</option>
+        </select>
     </form>
 </body>
 </html>
