--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
             <option>Hồ Chí Minh</option>
             <option>Đà Nẵng</option>
         </select>
+        <label>Ghi chú</label><br>
+        <textarea rows="10" cols="40">
+
+        </textarea>
     </form>
 </body>
 </html>
